charlie-2009-12-09.mddramimage.zip:
	wget https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/ram/charlie-2009-12-09.mddramimage.zip

hiberfile.raw:
	wget https://digitalcorpora.s3.amazonaws.com/corpora/drives/nps-2009-domexusers/nps-2009-domexusers.E01
	ewfexport -o 33553408 -B 256000000 -f raw -t hiberfile -S 0 ~/corp/nps-2009-domexusers/nps-2009-domexusers.E01


EXTRA_DIST = \
	.gitignore \
	1.jpg \
	1mb_fat32.dmg \
	CFReDS001.E01 \
	KML_Samples.kml \
	email_test.E01 \
	email_test.E02 \
	email_test.E03 \
	email_test.E04 \
	exif_demo1.jpg \
	exif_demo2.tiff \
	exif_demo3.psd \
	hello.c \
	hello_elf \
	hello_mach-o \
	hello_win64_exe \
	interrupted_report.xml \
	iwork_09.pages \
	john_jakes.vcf \
	jpegs.rar \
	len6192.jpg \
	nps-2010-emails.100k.raw \
	nps-email.txt \
	ntlm.pcap-noheader \
	ntlm1.pcap \
	ntlm2.pcap \
	ntlm3.pcap \
	ntlm80.pcap \
	pdf_words1.stream \
	pdf_words2.pdf \
	ram_2pages.bin \
	test_base16json.txt \
	test_base64json.txt \
	test_hello.512b.gz \
	test_hello.gz \
	test_json.txt \
	testfilex.docx \
	utf16_urls.bin
