charlie-2009-12-09.mddramimage.zip:
	wget https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/ram/charlie-2009-12-09.mddramimage.zip

hiberfile.raw:
	wget https://digitalcorpora.s3.amazonaws.com/corpora/drives/nps-2009-domexusers/nps-2009-domexusers.E01
	ewfexport -o 33553408 -B 256000000 -f raw -t hiberfile -S 0 ~/corp/nps-2009-domexusers/nps-2009-domexusers.E01
